# PracticaRectaTangenteNormal

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Practica.py  README.org  index.html  pyproject.toml  requirements.txt  start.sh  uwsgi.ini
static/: scripts.js  styles.css
