[tool.poetry]
name = "calculo-diferencial"
version = "0.1.0"
description = "Backend del proyecto de maximiliano"
authors = ["cheerio-pixel <frailin300@gmail.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
sympy = "^1.12"
uwsgi = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
